--- a/app/src/main/res/layout/fiche_film_activity.xml
+++ b/app/src/main/res/layout/fiche_film_activity.xml
@@ -14,10 +14,11 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
+
         <FrameLayout
             android:id="@+id/film_background"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="229dp"
             android:background="@drawable/img20">
 
 
@@ -25,18 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/my_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@color/actionBarre"
-                    android:elevation="4dp"
-                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:titleTextColor="@color/textColorPrimary"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
 
                 <VideoView
                     android:id="@+id/videoView"
@@ -47,7 +37,7 @@
                     android:layout_marginTop="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/my_toolbar" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageButton
                     android:id="@+id/play_stop"
@@ -64,9 +54,36 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/heart" />
 
+                <TextView
+                    android:id="@+id/film_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="casual"
+                    android:paddingLeft="0dp"
+                    android:text="Peter Rabbit"
+                    android:paddingStart="16dp"
+
+                    android:background="@color/statutBarre"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/textColorPrimary"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/videoView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
 
             </android.support.constraint.ConstraintLayout>
         </FrameLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/actionBarre"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:titleTextColor="@color/textColorPrimary" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -82,22 +99,8 @@
                     android:layout_height="0dp" android:focusable="true"
                     android:focusableInTouchMode="true"><requestFocus/></View>
 
-                <TextView
-                    android:id="@+id/film_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:fontFamily="casual"
-                    android:paddingLeft="0dp"
-                    android:text="Peter Rabbit"
-                    android:textColor="@color/textColorPrimary"
-                    android:textSize="25dp"
-                    android:textStyle="bold"
-                    android:textAlignment="textStart"
-                     />
+
+
                 <TextView
                     android:id="@+id/film_description"
                     android:layout_width="wrap_content"
@@ -110,23 +113,69 @@
                     android:textColor="@color/textColorPrimary"
                     android:textSize="15dp"
                     android:textStyle="bold" />
+                <FrameLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@color/colorPrimary">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:orientation="vertical">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@android:color/black"
+                        android:layout_marginBottom="4dp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:id="@+id/nb_comments"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center_vertical"
+                            android:text="Commentaires"
+                            android:layout_marginStart="8dp"
+                            android:textColor="@color/section_color"
+                            android:textSize="15sp" />
+                        <android.support.v4.widget.Space
+                            android:layout_width="180dp"
+                            android:layout_height="match_parent" />
+                        <ImageButton
+                            android:id="@+id/more"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            app:srcCompat="@drawable/ic_expand_more_black_24dp" />
+
+                    </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@android:color/black"
+                            android:layout_marginTop="4dp"/>
+                    </LinearLayout>
+
+
+                </FrameLayout>
 
                 <FrameLayout
                     android:id="@+id/commentaire"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimary">
-                    <TextView
-                        android:id="@+id/nb_comments"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="center_vertical"
-                        android:text="Commentaires"
-                        android:textColor="@color/section_color"
-                        android:textSize="12sp" />
+
                     <include layout="@layout/content_comment" />
 
                 </FrameLayout>
