--- a/app/src/main/res/layout/fiche_personne_activity.xml
+++ b/app/src/main/res/layout/fiche_personne_activity.xml
@@ -19,25 +19,20 @@
             android:layout_width="match_parent"
             android:layout_height="256dp"
             android:background="@drawable/img20">
-
-
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
+           
+            <android.support.v4.widget.Space
+                android:layout_width="match_parent"
+                android:layout_height="192dp" />
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/my_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@color/actionBarre"
-                    android:elevation="4dp"
-                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:titleTextColor="@color/textColorPrimary"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
+                android:layout_height="wrap_content"
+                android:background="@color/statutBarre">
 
 
                 <TextView
@@ -45,9 +40,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="0dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="0dp"
                     android:text="Jennefer Lawrance"
                     android:textAlignment="textStart"
                     android:textSize="25dp"
@@ -63,8 +58,8 @@
 
                 <TextView
                     android:id="@+id/bearthday"
-                    android:layout_width="wrap_content"
-                    android:layout_height="31dp"
+                    android:layout_width="140dp"
+                    android:layout_height="29dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="casual"
@@ -82,7 +77,6 @@
                     android:id="@+id/play_stop"
                     android:layout_width="41dp"
                     android:layout_height="38dp"
-                    android:layout_marginBottom="4dp"
                     android:layout_marginStart="16dp"
                     android:background="@null"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +85,20 @@
 
 
             </android.support.constraint.ConstraintLayout>
+            </LinearLayout>
         </FrameLayout>
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/actionBarre"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:titleTextColor="@color/textColorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+
 
         <ScrollView
             android:layout_width="match_parent"
@@ -123,7 +130,72 @@
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
 
+                <FrameLayout
 
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@color/colorPrimary">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@android:color/black"
+                            android:layout_marginBottom="4dp"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="left"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/nb_comments"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center_vertical"
+                                android:text="Commentaires"
+                                android:layout_marginStart="8dp"
+                                android:textColor="@color/section_color"
+                                android:textSize="15sp" />
+                            <android.support.v4.widget.Space
+                                android:layout_width="180dp"
+                                android:layout_height="match_parent" />
+                            <ImageButton
+                                android:id="@+id/more"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                app:srcCompat="@drawable/ic_expand_more_black_24dp" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@android:color/black"
+                            android:layout_marginTop="4dp"/>
+                    </LinearLayout>
+
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/commentaire"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary">
+
+                    <include layout="@layout/content_comment" />
+
+                </FrameLayout>
 
                 <FrameLayout
                     android:layout_width="match_parent"
