--- a/app/src/main/res/layout/fiche_serie_activity.xml
+++ b/app/src/main/res/layout/fiche_serie_activity.xml
@@ -17,7 +17,7 @@
         <FrameLayout
             android:id="@+id/affiche"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="229dp"
             android:background="@drawable/once_upon_a_time">
 
 
@@ -25,32 +25,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/my_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@color/actionBarre"
-                    android:elevation="4dp"
-                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:titleTextColor="@color/textColorPrimary"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
 
                 <TextView
                     android:id="@+id/serie_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+
                     android:fontFamily="casual"
                     android:paddingLeft="20dp"
                     android:text="Once Upon A Time"
                     android:textColor="@color/textColorPrimary"
                     android:textSize="25dp"
+                    android:background="@color/statutBarre"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -60,6 +47,15 @@
                     app:layout_constraintVertical_bias="1.0" />
             </android.support.constraint.ConstraintLayout>
         </FrameLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/actionBarre"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:titleTextColor="@color/textColorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -88,6 +84,72 @@
                     android:textColor="@color/textColorPrimary"
                     android:textSize="15dp"
                     android:textStyle="bold" />
+                <FrameLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@color/colorPrimary">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:orientation="vertical">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@android:color/black"
+                            android:layout_marginBottom="4dp"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="left"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/nb_comments"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerVertical="true"
+                                android:layout_gravity="center_vertical"
+                                android:text="Commentaires"
+                                android:layout_marginStart="8dp"
+                                android:textColor="@color/section_color"
+                                android:textSize="15sp" />
+                            <android.support.v4.widget.Space
+                                android:layout_width="180dp"
+                                android:layout_height="match_parent" />
+                            <ImageButton
+                                android:id="@+id/more"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@null"
+                                app:srcCompat="@drawable/ic_expand_more_black_24dp" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:background="@android:color/black"
+                            android:layout_marginTop="4dp"/>
+                    </LinearLayout>
+
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/commentaire"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary">
+
+                    <include layout="@layout/content_comment" />
+
+                </FrameLayout>
 
                 <FrameLayout
                     android:layout_width="match_parent"
