--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,8 +22,9 @@
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
             android:text="Saisons"
+            android:layout_marginStart="8dp"
             android:textColor="@color/section_color"
-            android:textSize="12sp" />
+            android:textSize="15sp" />
 
 
 
