--- a/app/src/main/res/layout/salles_projection.xml
+++ b/app/src/main/res/layout/salles_projection.xml
@@ -22,7 +22,7 @@
             android:layout_height="50dp"
             android:paddingStart="10dp"
             android:paddingTop="10dp"
-            android:text="@string/proj"
+            android:text="salles de projection"
             android:textColor="#fff"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -30,17 +30,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/closePop"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@android:drawable/ic_menu_close_clear_cancel"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/popTitle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+
     </android.support.constraint.ConstraintLayout>
 
 
