--- a/app/src/main/res/layout-large/list_single_card.xml
+++ b/app/src/main/res/layout-large/list_single_card.xml
@@ -17,24 +17,24 @@
 
         <FrameLayout
             android:id="@+id/imageFilmLie"
-            android:layout_width="150dp"
-            android:layout_height="170dp"
+            android:layout_width="100dp"
+            android:layout_height="120dp"
             android:background="@drawable/img2">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="132dp">
 
                 <TextView
                     android:id="@+id/tvTitle"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="36dp"
                     android:background="@color/titleBarre"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:text="Sample title"
                     android:textColor="@android:color/black"
-                    android:textSize="25sp"
+                    android:textSize="10sp"
                     android:paddingBottom="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
