--- a/app/src/main/res/layout-large/comment_card.xml
+++ b/app/src/main/res/layout-large/comment_card.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bcgrd">
+    android:background="@color/bcgrd"
+    android:paddingLeft="16dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
@@ -23,21 +24,21 @@
         <TextView
             android:id="@+id/nom"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="left"
             android:paddingLeft="5dp"
             android:text="user name"
             android:textColor="@color/colorPrimary"
-            android:textSize="12sp"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <RatingBar
             android:id="@+id/rating"
-            style="?android:attr/ratingBarStyleSmall"
+            style="?android:attr/ratingBarStyleIndicator"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginStart="8dp"
@@ -56,40 +57,42 @@
 
     <TextView
         android:id="@+id/message"
-        android:layout_width="240dp"
+        android:layout_width="580dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="8dp"
-        android:background="#fff"
+        android:background="@color/textColorPrimary"
         android:paddingBottom="5dp"
         android:paddingEnd="5dip"
         android:paddingStart="20dip"
         android:paddingTop="5dp"
         android:text="Message"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/arrow" />
+
     <ImageView
         android:id="@+id/arrow"
-        android:layout_width="10dp"
-        android:layout_height="20dp"
+        android:layout_width="20dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/app_name"
         android:padding="0dp"
         android:src="@drawable/arrow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/profile"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.366" />
+        app:layout_constraintVertical_bias="0.823" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile"
-        android:layout_width="57dp"
-        android:layout_height="58dp"
+        android:layout_width="77dp"
+        android:layout_height="78dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
