--- a/app/src/main/res/layout-large/fan_fragment.xml
+++ b/app/src/main/res/layout-large/fan_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/bcgrd"
     tools:context="com.example.meriemmeguellati.cinema.Activities.MainActivity">
 
 
@@ -14,15 +14,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical"
-            android:background="@color/bcgrd">
+            android:orientation="vertical">
 
 
             <TextView
@@ -33,7 +31,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="32dp"
                 android:fontFamily="casual"
-                android:text="Latest movies"
+                android:text="Mes Films"
                 android:textAlignment="center"
                 android:textColor="@color/colorAccent"
                 android:textSize="40dp"
@@ -41,7 +39,7 @@
 
 
             <android.support.v4.view.ViewPager
-                android:id="@+id/viewPager"
+                android:id="@+id/mes_films"
                 android:layout_width="wrap_content"
                 android:layout_height="453dp"
                 android:layout_gravity="bottom"
@@ -66,14 +64,14 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="casual"
-                android:text="Latest Series"
+                android:text="Mes Feuilletons"
                 android:textAlignment="center"
                 android:textColor="@color/colorAccent"
                 android:textSize="40dp"
                 android:textStyle="bold" />
 
             <android.support.v4.view.ViewPager
-                android:id="@+id/viewPager2"
+                android:id="@+id/mes_feuilletons"
                 android:layout_width="wrap_content"
                 android:layout_height="453dp"
                 android:layout_gravity="bottom"
@@ -86,6 +84,38 @@
                 android:paddingLeft="80dp"
                 android:paddingRight="80dp"
                 android:paddingStart="208dp">
+
+            </android.support.v4.view.ViewPager>
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="casual"
+                android:text="Mes salles"
+                android:textAlignment="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="40dp"
+                android:textStyle="bold" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/mes_salles"
+                android:layout_width="wrap_content"
+                android:layout_height="453dp"
+                android:layout_gravity="bottom"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:clipToPadding="false"
+                android:overScrollMode="never"
+                android:paddingBottom="30dp"
+                android:paddingEnd="108dp"
+                android:paddingLeft="80dp"
+                android:paddingRight="80dp"
+                android:paddingStart="108dp">
 
             </android.support.v4.view.ViewPager>
 
