--- a/app/src/main/res/layout-large/fiche_film_activity.xml
+++ b/app/src/main/res/layout-large/fiche_film_activity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/bcgrd"
     tools:context="com.example.meriemmeguellati.cinema.Activities.MainActivity">
 
 
@@ -78,7 +78,7 @@
             android:id="@+id/my_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/actionBarre"
+            android:background="@color/colorPrimaryDark"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -109,16 +109,16 @@
                     android:layout_marginTop="0dp"
                     android:text="  Pierre Lapin est une comédie américano-australienne, écrite et réalisée par Will Gluck qui mêle animation et prises de vues réelles, sortie en 2018."
                     android:textAlignment="textStart"
-                    android:textColor="@color/textColorPrimary"
-                    android:textSize="25dp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/colorPrimary"
+                    android:padding="8dp"
+                    android:textSize="25dp" />
                 <FrameLayout
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
-                    android:background="@color/colorPrimary">
+                    android:background="@color/bcgrd">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -128,7 +128,7 @@
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="0.5dp"
-                            android:background="@android:color/black"
+                            android:background="@color/comment"
                             android:layout_marginBottom="4dp"/>
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -146,7 +146,7 @@
                                 android:text="Commentaires"
                                 android:layout_marginStart="8dp"
                                 android:textColor="@color/section_color"
-                                android:textSize="20sp" />
+                                android:textSize="25sp" />
                             <android.support.v4.widget.Space
                                 android:layout_width="500dp"
                                 android:layout_height="match_parent" />
@@ -162,7 +162,8 @@
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="0.5dp"
-                            android:background="@android:color/black"
+                            android:background="@color/comment"
+                            android:layout_marginBottom="4dp"
                             android:layout_marginTop="4dp"/>
                     </LinearLayout>
 
@@ -173,7 +174,7 @@
                     android:id="@+id/commentaire"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimary">
+                    android:background="@color/bcgrd">
 
                     <include layout="@layout/content_comment" />
 
@@ -181,7 +182,8 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimary">
+                    android:background="@color/bcgrd"
+                    android:paddingLeft="16dp">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/personnes_associees"
@@ -194,7 +196,8 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorPrimary">
+                    android:background="@color/bcgrd"
+                    android:paddingLeft="16dp">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/film_lies"
