--- a/app/src/main/res/layout-large/view_pager_item.xml
+++ b/app/src/main/res/layout-large/view_pager_item.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     app:cardUseCompatPadding="true"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center">
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
         <LinearLayout
@@ -21,13 +21,9 @@
 
             <ImageView
                 android:id="@+id/filmPoster"
-                android:layout_width="200dp"
-                android:layout_height="358dp"
-
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
+                android:layout_width="405dp"
+                android:layout_height="327dp"
+                android:layout_marginTop="4dp"
                 app:srcCompat="@drawable/img2" />
 
             <LinearLayout
@@ -38,10 +34,19 @@
                 android:background="#FFF"
                 >
                 <android.support.v4.widget.Space
-                    android:layout_width="120dp"
+                    android:layout_width="180dp"
                     android:layout_height="0dp" />
 
 
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_weight="2"
+                    android:background="#FFF"
+                    android:gravity="end"
+                    android:paddingBottom="5dp"
+                    app:srcCompat="@drawable/heart" />
 
             </LinearLayout>
         </LinearLayout>
