--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,7 @@
         android:paddingBottom="0dp"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
+        android:background="@color/bcgrd"
         android:paddingTop="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context="com.example.meriemmeguellati.cinema.Activities.MainActivity"
