--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".fragments.CommentsFragment"
-    android:background="@color/colorPrimary"
+    android:background="@color/bcgrd"
     >
 
     <android.support.v7.widget.RecyclerView
@@ -13,7 +13,7 @@
         android:id="@+id/comments_recyler_view"
         android:clipToPadding="false"
         android:scrollbars="vertical"
-        android:background="@color/colorPrimary"
+        android:background="@color/bcgrd"
         >
 
     </android.support.v7.widget.RecyclerView>
