--- a/app/src/main/res/layout/salle_card.xml
+++ b/app/src/main/res/layout/salle_card.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/nom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorAccent"
                 android:fontFamily="casual"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
