get seasons and episodes

--- a/app/src/main/res/layout/fiche_serie_activity.xml
+++ b/app/src/main/res/layout/fiche_serie_activity.xml
@@ -28,6 +28,12 @@
             android:background="@drawable/once_upon_a_time">
 
 
+            <ImageView
+                android:id="@+id/backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/revenge" />
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
