--- a/app/src/main/res/layout/fiche_film_activity.xml
+++ b/app/src/main/res/layout/fiche_film_activity.xml
@@ -29,6 +29,12 @@
             android:background="@drawable/img20">
 
 
+            <ImageView
+                android:id="@+id/backdrop_film"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/once" />
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
